@@ -2,7 +2,10 @@
   ChangeLog for the eggleton-tools repository.  
   Please log (major) changes here (and add a short comment using svn commit -m 'Comment').
     
-    92: AstroFloyd, 13/07/2010
+    93: AstroFloyd, 14/07/2010
+     - Fixed some 'uninitialised variable' compiler warnings
+    
+    92: AstroFloyd, 14/07/2010
      - Updated Makefile
      - Small changes in settings file
      - Small bugfix
